remove prev&next button in pagination, fix 'total: 48 ...' collapse in screen case 'Mobile M'

--- a/src/main/webapp/resources/css/overlay.css
+++ b/src/main/webapp/resources/css/overlay.css
@@ -62,7 +62,15 @@ ul.pagination-list > li.hide {
     display: none;
 }
 
-ul.pagination-list .favth-select {
-    width: 50px;
-    padding: 0;
+
+div.pagination > span {
+    display: block;
+}
+
+div.pagination > span > p {
+    display: inline;
+}
+
+div.pagination > span > select {
+    width: 75px;
 }
